# TryItOut-CPP-Basics-SOLUTION

./: CMakeLists.txt
inc/: CPPBasics.h
src/: CPPBasics.cpp  CPPBasicsTest.cpp
